# lta-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LIBDOC.md  LICENSE  README.md  azure-pipelines.yml  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: rust.yml
benches/: benchmark.rs
dumped_data/: bike_parking.json  bus_arrival.json  bus_route.json  bus_services.json  bus_stops.json  carpark_avail.json  erp_rates.json  est_travel_time.json  faulty_traffic_lights.json  passenger_vol_bus_stops.json  passenger_vol_od_bus_stops.json  passenger_vol_od_train.json  passenger_vol_train.json  taxi_avail.json  taxi_stands.json  train_service_alert.json
example/: Cargo.toml  README.md
example/src/: main.rs
examples/: bus_timing.rs  custom_client.rs  reqwest_blocking.rs  ureq.rs
lta/: all.html  enum.LTAError.html  index.html  sidebar-items.js  struct.Bus.html  struct.Crowd.html  struct.Facility.html  struct.Geo.html  struct.Taxi.html  struct.Traffic.html  struct.Train.html  trait.Client.html  type.LTAResult.html
lta/async/: index.html  trait.ClientExt.html
lta/async/bus/: index.html  sidebar-items.js  trait.BusRequests.html
lta/async/client/: index.html  struct.LTAClient.html
lta/async/crowd/: index.html  trait.CrowdRequests.html
lta/async/facility/: index.html  trait.FacilityRequests.html
lta/async/geo/: index.html  trait.GeoRequests.html
lta/async/prelude/: index.html
lta/async/taxi/: index.html  sidebar-items.js  trait.TaxiRequests.html
lta/async/traffic/: index.html  sidebar-items.js  trait.TrafficRequests.html
lta/async/train/: index.html  sidebar-items.js  trait.TrainRequests.html
lta/blocking/: index.html  sidebar-items.js  trait.ClientExt.html
lta/blocking/bus/: index.html  trait.BusRequests.html
lta/blocking/client/: index.html  sidebar-items.js  struct.LTAClient.html
lta/blocking/crowd/: index.html  sidebar-items.js  trait.CrowdRequests.html
lta/blocking/facility/: index.html  sidebar-items.js  trait.FacilityRequests.html
lta/blocking/geo/: index.html  sidebar-items.js  trait.GeoRequests.html
lta/blocking/prelude/: index.html
lta/blocking/taxi/: index.html  trait.TaxiRequests.html
lta/blocking/traffic/: index.html  trait.TrafficRequests.html
lta/blocking/train/: index.html  trait.TrainRequests.html
lta/prelude/: index.html
lta/reqwest_async/: index.html  sidebar-items.js  struct.ReqwestAsync.html
lta/reqwest_async/bus/: index.html
lta/reqwest_async/client/: index.html
lta/reqwest_async/crowd/: index.html
lta/reqwest_async/facility/: index.html
lta/reqwest_async/geo/: index.html
lta/reqwest_async/taxi/: index.html
lta/reqwest_async/traffic/: index.html
lta/reqwest_async/train/: index.html
lta/reqwest_blocking/: index.html  sidebar-items.js  struct.RequestBuilder.html  struct.ReqwestBlocking.html  struct.Response.html
lta/reqwest_blocking/bus/: index.html
lta/reqwest_blocking/client/: index.html
lta/reqwest_blocking/crowd/: index.html
lta/reqwest_blocking/facility/: index.html
lta/reqwest_blocking/geo/: index.html
lta/reqwest_blocking/taxi/: index.html
lta/reqwest_blocking/traffic/: index.html
lta/reqwest_blocking/train/: index.html
lta/ureq_blocking/: index.html  sidebar-items.js  struct.Agent.html
lta/ureq_blocking/bus/: index.html
lta/ureq_blocking/client/: index.html
lta/ureq_blocking/crowd/: index.html
lta/ureq_blocking/facility/: index.html
lta/ureq_blocking/geo/: index.html
lta/ureq_blocking/taxi/: index.html
lta/ureq_blocking/traffic/: index.html
lta/ureq_blocking/train/: index.html
lta_async/: Cargo.toml
lta_async/src/: bus.rs  crowd.rs  lib.rs  lta_client.rs  taxi.rs  traffic.rs  train.rs
lta_blocking/: Cargo.toml
lta_blocking/src/: bus.rs  crowd.rs  lib.rs  lta_client.rs  taxi.rs  traffic.rs  train.rs
lta_models/: Cargo.toml  LICENSE
lta_models/src/: bus.rs  bus_enums.rs  crowd.rs  lib.rs  taxi.rs  traffic.rs  train.rs
lta_utils_commons/: Cargo.toml
lta_utils_commons/src/: lib.rs
src/: bus.rs  bus_enums.rs  client_config.rs  crowd.rs  lib.rs  lta_client.rs  taxi.rs  traffic.rs  train.rs  utils.rs
src/async/: bus.rs  client.rs  crowd.rs  facility.rs  geo.rs  lta_client.rs  mod.rs  taxi.rs  traffic.rs  train.rs
src/blocking/: bus.rs  client.rs  crowd.rs  facility.rs  geo.rs  mod.rs  taxi.rs  traffic.rs  train.rs
src/lta/: lib.rs.html
src/lta/async/: bus.rs.html  client.rs.html  crowd.rs.html  facility.rs.html  geo.rs.html  mod.rs.html  taxi.rs.html  traffic.rs.html  train.rs.html
src/lta/blocking/: bus.rs.html  client.rs.html  crowd.rs.html  facility.rs.html  geo.rs.html  mod.rs.html  taxi.rs.html  traffic.rs.html  train.rs.html
src/lta/reqwest_async/: bus.rs.html  client.rs.html  crowd.rs.html  facility.rs.html  geo.rs.html  mod.rs.html  taxi.rs.html  traffic.rs.html  train.rs.html
src/lta/reqwest_blocking/: bus.rs.html  client.rs.html  crowd.rs.html  facility.rs.html  geo.rs.html  mod.rs.html  taxi.rs.html  traffic.rs.html  train.rs.html
src/lta/ureq_blocking/: bus.rs.html  client.rs.html  crowd.rs.html  facility.rs.html  geo.rs.html  mod.rs.html  taxi.rs.html  traffic.rs.html  train.rs.html
src/reqwest_async/: bus.rs  client.rs  crowd.rs  facility.rs  geo.rs  mod.rs  taxi.rs  traffic.rs  train.rs
src/reqwest_blocking/: bus.rs  client.rs  crowd.rs  facility.rs  geo.rs  mod.rs  taxi.rs  traffic.rs  train.rs
src/ureq_blocking/: bus.rs  client.rs  crowd.rs  facility.rs  geo.rs  mod.rs  taxi.rs  traffic.rs  train.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/lta/: trait.Client.js
type.impl/core/result/: enum.Result.js
