[package]
name = "lta"
version = "0.5.0"
authors = ["budinverse <me@inve.rs>"]
edition = "2018"
homepage = "https://github.com/BudiNverse/lta-rs"
repository = "https://github.com/BudiNverse/lta-rs"
description = "🚍 Singapore LTA Datamall Rust Client written in pure rust with support for asynchronous requests"
readme = "README.md"
license = "MIT"
keywords = ["LTA", "Singapore", "Client", "Datamall"]
exclude = [
    "/.travis.yml",
    "/logo.png",
    "./azure-pipelines.yml",
    "./.github"
]

[lib]
name = "lta"

[features]
default = ["async-trait"]
blocking = ["reqwest/blocking"]

[dependencies]
lta_models = "0.3.0"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = { version = "1.0.118" }
async-trait = { version = "0.1.42", optional = true }
futures-util = "0.3.17"
thiserror = "1.0.29"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}