[package]
name = "lta"
version = "0.6.0"
authors = ["budinverse <me@inve.rs>"]
edition = "2021"
homepage = "https://github.com/BudiNverse/lta-rs"
repository = "https://github.com/BudiNverse/lta-rs"
description = "🚍 Singapore LTA Datamall Rust Client written in pure rust with support for asynchronous requests"
readme = "README.md"
license = "MIT"
keywords = ["LTA", "Singapore", "Client", "Datamall"]
exclude = [
    "/.travis.yml",
    "/logo.png",
    "./azure-pipelines.yml",
    "./.github"
]

[lib]
name = "lta"

[features]
default = ["non-blocking-traits", "reqwest"]
blocking = ["reqwest", "reqwest/blocking", "blocking-traits"]
fastfloat = ["lta_models/fastfloat"] 
ureq-blocking = ["ureq"]
blocking-traits = []
non-blocking-traits = ["async-trait"]

[dependencies]
lta_models = { version = "0.4.0", default-features = false }
reqwest = { version = "0.11.10", features = ["json"], default-features = false, optional = true}
serde = { version = "1.0.137" }
async-trait = { version = "0.1.53", optional = true }
thiserror = "1.0.31"
ureq = { version = "2.5.0", features = ["json", "charset"], default-features = false, optional = true}

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}