[package]
name = "example"
version = "0.1.0"
authors = ["BudiNverse <me@inve.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lta = { path = "../", features = ["blocking"]}
tokio = { version = "1.0", features = ["macros"]}