[package]
name = "lta_async"
version = "0.1.0"
authors = ["Budi Syahiddin <budisyahiddin@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lta_models = { path = "../lta_models" }
lta_utils_commons = { path = "../lta_utils_commons" }
futures = "0.3.1"