[package]
name = "lta_blocking"
version = "0.1.0"
authors = ["Budi Syahiddin <budisyahiddin@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lta_utils_commons = { path = "../lta_utils_commons" }
lta_models = { path = "../lta_models" }