[package]
name = "lta_models"
version = "0.1.0"
authors = ["Budi Syahiddin <budisyahiddin@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lta_utils_commons = { path = "../lta_utils_commons" }
serde = { version = "1.0.97", features = ["derive"] }
serde_repr = "0.1.5"

[dev-dependencies]
serde_json = "1.0.40"
criterion = "0.3"